objects/Report_Details__c.object
<CustomObject>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content Type</label>
        <picklist>
            <picklistValues>
                <fullName>RichText</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>URL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Binary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_URL__c</fullName>
        <label>Content URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Page_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Page Question</label>
        <referenceTo>Page_Question__c</referenceTo>
        <relationshipLabel>Report Details</relationshipLabel>
        <relationshipName>Page_Question</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SRS_Report__c</fullName>
        <label>SRS Report</label>
        <referenceTo>SRS_Report__c</referenceTo>
        <relationshipLabel>Report Details</relationshipLabel>
        <relationshipName>Report_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <description>Report section</description>
        <label>Section</label>
        <picklist>
            <picklistValues>
                <fullName>Section A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subsection__c</fullName>
        <label>Subsection</label>
        <picklist>
            <controllingField>Section__c</controllingField>
            <picklistValues>
                <fullName>1.1 Vision and approach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.2 Scope of the report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1 The social problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.2 Solution attempts made to date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.3 The solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.1 Resources used (input)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.2 Work performed (output)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.3 Results achieved (outcome/impact)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.4 Presenting resources, work performed and results during the reporting period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5 Provisions taken for the accompanying evaluation and qualitiy assurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.6 Previous year comparison: Objectives achieved, learning experience and success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.1 Planning and targets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2 Influence factors: chances and risks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1 Organisational structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.2 Introduction of the participating individuals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.3 Partnerships, cooperations and networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.1 General information about the organisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.2 Governance of the organisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.3 Ownership structure, memberships and associated organisations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.4 Environmental and social profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.1 Bookkeeping and accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.2 Asset statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.3 Income and expenditure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.4 Financial situation and planning</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Report Detail</label>
    <nameField>
        <label>Report Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>